# mtuci_private_api

./: .coverage  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  logging_config.yaml  pyproject.toml
.github/workflows/: lint.yaml  publish_testpypi.yaml  tests.yaml
src/mtuci_private_api/: __init__.py  config.py  errors.py
src/mtuci_private_api/attendance/: __init__.py  service.py
src/mtuci_private_api/attendance/http/: __init__.py  base.py
src/mtuci_private_api/auth/: __init__.py  auto.py  service.py  service_v1.py  service_v2.py
src/mtuci_private_api/http/: __init__.py  base.py
src/mtuci_private_api/models/: __init__.py  mtuci.py
src/mtuci_private_api/mtuci/: __init__.py  base.py  mtuci.py
src/mtuci_private_api/parsers/: __init__.py  base.py
src/mtuci_private_api/schedule/: __init__.py  service.py
src/mtuci_private_api/user/: __init__.py  service.py
tests/: conftest.py  test_attendance_parsers.py  test_attendance_request_factory.py  test_attendance_service.py  test_auth.py  test_user_info_parsers.py  test_user_service.py
tests/attendance/: test_attendance_parsers.py  test_attendance_service.py
tests/auth/: test_auth_v1_parsers.py  test_auth_v2_parsers.py
tests/fixtures/: attendance_http_client.py  attendance_list.json  fake_auth_service.py  final_auth_response.html  form_response.html  main_response.html  schedule_http_client.py  skips_list.json  timetable.json  user_http_client.py  user_info.json  v1_auth_response2
tests/mtuci/: test_mtuci.py
tests/schedule/: test_schedule_parsers.py  test_schedule_service.py
(+39 files in other folders)
